--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>6.17.17 Group Assignment</title>
+  <title>HTML Exercise</title>
 
-  <!-- Fill in the href to the CSS such that this HTML file can access the CSS -->
-  <!-- Don't move the HTML or CSS file. Use Relative Linking -->
   <link rel="stylesheet" type="text/css" href="html.css">
 </head>
 
